rke2/tooling/flux/theswamp/deployment-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fmb-website
  namespace: theswamp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fmb-website
  template:
    metadata:
      labels:
        app: fmb-website
    spec:
      imagePullSecrets:
        - name: zot-pull-secret
      containers:
        - name: fmb-website
          image: zot.hwcopeland.net/florida-man-bioscience/fmb-website:main # {"$imagepolicy": "tooling:fmb-website"}
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 10
          resources:
            requests:
              memory: "32Mi"
              cpu: "10m"
            limits:
              memory: "128Mi"
              cpu: "100m"
