rke2/tooling/flux/theswamp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: u4u-engine
  namespace: theswamp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: u4u-engine
  template:
    metadata:
      labels:
        app: u4u-engine
    spec:
      imagePullSecrets:
        - name: zot-pull-secret
      containers:
        - name: u4u-engine
          image: zot.hwcopeland.net/florida-man-bioscience/u4u-engine:main@sha256:8dcbafba785dbeadbd878a261f55fc625f7f99b17f2f8f66b002ad54c0f498df # {"$imagepolicy": "tooling:u4u-engine"}
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "4Gi"
              cpu: "500m"
