rke2/tooling/flux/theswamp/service-demosites.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: demo-sites
  namespace: theswamp
spec:
  selector:
    app: demo-sites
  ports:
    - port: 80
      targetPort: 80
