rke2/tooling/flux/theswamp/service-frontend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: u4u-engine-frontend
  namespace: theswamp
spec:
  selector:
    app: u4u-engine-frontend
  ports:
    - port: 3000
      targetPort: 3000
