rke2/tooling/flux/theswamp/service-tracker.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: site-tracker
  namespace: theswamp
spec:
  selector:
    app: site-tracker
  ports:
    - port: 8040
      targetPort: 8040
