rke2/tooling/flux/theswamp/service-website.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fmb-website
  namespace: theswamp
spec:
  selector:
    app: fmb-website
  ports:
    - port: 80
      targetPort: 80
