rke2/tooling/flux/theswamp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: u4u-engine
  namespace: theswamp
spec:
  selector:
    app: u4u-engine
  ports:
    - port: 8000
      targetPort: 8000
